--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,54 +1,11 @@
-VINNAG
-Welcome to LEARNING MANAGEMENT SYSTEM
-2 homepage by using the html
-Welcome to Learning Management System Home Page
-Ready To Learn!
+<video controls width="250">
+    <source src="/media/cc0-videos/flower.webm" type="video/webm">
 
+    <source src="/media/cc0-videos/flower.mp4" type="video/mp4">
 
-VINNAG
-
-3. homepage by using the html
-VINNAG LMS Home About Contact
-HOME
-Learn More
-Projects
-
-I have worked on many projects and I am very proud of them. I am a very good developer and I am always looking for new projects.
-
-Skills
-
-I have a lot of skills and I am very good at them. I am very good at programming and I am always looking for new skills.
-
-Software
-
-I have a lot of software skills and I am very good at them. I am very good at networking and I am always looking for new software skills.
-
-About Me
-I am a web developer and I love to create websites. and I am always looking for new projects.
-
-© 2023 Developer
-More Info Home About Contact
-Social Links
-4. integration of the ms teams and the google meet
-INTEGRATION OF GOOGLE MEETS
- 
-5. sliding box by using the html
-Sliding bar for the LMS
-
-
-
-
-
-
-
-
-
-6. image slider by using the html
-
-
-
-
-
-
-
-CSS file of the image slider bar *{ margin: 0; padding:0; box-sizing: border-box; } .container{ width: 70%; height: 500px; background:#222; margin: auto; margin-top: 100px; display: flex; align-items: center; justify-content: center; } .swiper{ width: 50%; height: 50vh; display: flex; align-items: center; justify-content: center; } .swiper-slide img{ width: 1000px;; }
+    Download the
+    <a href="/media/cc0-videos/flower.webm">WEBM</a>
+    or
+    <a href="/media/cc0-videos/flower.mp4">MP4</a>
+    video.
+</video>
