--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,8 @@
-<video controls width="250">
-    <source src="/media/cc0-videos/flower.webm" type="video/webm">
-
-    <source src="/media/cc0-videos/flower.mp4" type="video/mp4">
-
-    Download the
-    <a href="/media/cc0-videos/flower.webm">WEBM</a>
-    or
-    <a href="/media/cc0-videos/flower.mp4">MP4</a>
-    video.
+<video controls>
+  <source src="myVideo.webm" type="video/webm" />
+  <source src="myVideo.mp4" type="video/mp4" />
+  <p>
+    Your browser doesn't support HTML video. Here is a
+    <a href="myVideo.mp4">link to the video</a> instead.
+  </p>
 </video>
